--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,14 +1,15 @@
-$black: #222222;
+$black: #000;
+$dark: #222222;
 $white: #fff;
 $blue: #77c5ea;
 
 *,
 *:before,
 *:after {
-	box-sizing: inherit;
-	font-family: 'Montserrat', sans-serif;
-	color: $white;
+  box-sizing: inherit;
+  font-family: 'Montserrat', sans-serif;
+  color: $white;
   margin: 0;
-	padding: 0;
-	list-style: none;
+  padding: 0;
+  list-style: none;
 }
