--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -6,7 +6,7 @@ $blue: #77c5ea;
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   color: $white;
   margin: 0;
